# dbt-incremental-ci

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
DbtEducationalDataProject/: dbt_project.yml
DbtEducationalDataProject/models/marts/core/: student_enrollment_history_incremental.sql
DbtEducationalDataProject/models/staging/: stg_enrollments_incremental.sql
prod_state/: manifest.json
src/dbt_incremental_ci/: __init__.py  cli.py  copier.py  core.py  dbt_cloud.py  dbt_helper.py
